# secp-ffi

./: Cargo.toml  README.md  build.rs  uniffi.toml
example/kotlin/: gradle.properties  gradlew  settings.gradle.kts
example/kotlin/app/: build.gradle.kts
example/kotlin/app/src/main/kotlin/org/secp/: Api.kt  App.kt  secp.kt
example/kotlin/app/src/main/resources/: libsecpffi.dylib
example/kotlin/app/src/test/kotlin/org/secp/: AppTest.kt
example/kotlin/gradle/: libs.versions.toml
src/: lib.rs  secp.udl
